--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="m-0"><i class="fa fa-map-marker-alt me-3"></i>Travela</h1>
+                    <h1 class="m-0"><i class="fa fa-map-marker-alt me-3"></i>GENZ</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -121,8 +121,7 @@
                                 <div class="p-3" style="max-width: 900px;">
                                     <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Explore The World</h4>
                                     <h1 class="display-2 text-capitalize text-white mb-4">Let's The World Together!</h1>
-                                    <p class="mb-5 fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                                    </p>
+                                    <p class="mb-5 fs-5">Uganda, the Pearl of Africa, offers breathtaking landscapes, diverse wildlife, rich culture, warm people, and unforgettable adventures—from gorilla trekking to Nile explorations—creating a truly captivating and memorable travel experience</p>
                                     <div class="d-flex align-items-center justify-content-center">
                                         <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="#">Discover Now</a>
                                     </div>
@@ -135,8 +134,7 @@
                                 <div class="p-3" style="max-width: 900px;">
                                     <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Explore The World</h4>
                                     <h1 class="display-2 text-capitalize text-white mb-4">Find Your Perfect Tour At Travel</h1>
-                                    <p class="mb-5 fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                                    </p>
+                                    <p class="mb-5 fs-5">Uganda, the Pearl of Africa, offers breathtaking landscapes, diverse wildlife, rich culture, warm people, and unforgettable adventures—from gorilla trekking to Nile explorations—creating a truly captivating and memorable travel experience</p>
                                     <div class="d-flex align-items-center justify-content-center">
                                         <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="#">Discover Now</a>
                                     </div>
@@ -149,8 +147,7 @@
                                 <div class="p-3" style="max-width: 900px;">
                                     <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Explore The World</h4>
                                     <h1 class="display-2 text-capitalize text-white mb-4">You Like To Go?</h1>
-                                    <p class="mb-5 fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                                    </p>
+                                    <p class="mb-5 fs-5">Uganda, the Pearl of Africa, offers breathtaking landscapes, diverse wildlife, rich culture, warm people, and unforgettable adventures—from gorilla trekking to Nile explorations—creating a truly captivating and memorable travel experience.</p>
                                     <div class="d-flex align-items-center justify-content-center">
                                         <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="#">Discover Now</a>
                                     </div>
@@ -191,9 +188,9 @@
                     </div>
                     <div class="col-lg-7" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/about-img-1.png);">
                         <h5 class="section-about-title pe-3">About Us</h5>
-                        <h1 class="mb-4">Welcome to <span class="text-primary">Travela</span></h1>
-                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, dolorum, doloribus sunt dicta, officia voluptatibus libero necessitatibus natus impedit quam ullam assumenda? Id atque iste consectetur. Commodi odit ab saepe!</p>
-                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos voluptatem suscipit neque enim, doloribus ipsum rem eos distinctio, dignissimos nisi saepe nulla? Libero numquam perferendis provident placeat molestiae quia?</p>
+                        <h1 class="mb-4">Welcome to <span class="text-primary">GENZ</span></h1>
+                        <p class="mb-4">GENZ is a dynamic tourism company delivering curated adventures, authentic cultural experiences, and exceptional service, showcasing Uganda’s breathtaking beauty with modern style and unforgettable professionalism</p>
+                        <p class="mb-4">GENZ is a dynamic tourism company delivering curated adventures, authentic cultural experiences, and exceptional service, showcasing Uganda’s breathtaking beauty with modern style and unforgettable professionalism</p>
                         <div class="row gy-2 gx-4 mb-4">
                             <div class="col-sm-6">
                                 <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>First Class Flights</p>
@@ -1509,7 +1506,7 @@
                                 </div>
                             </div>
                             <div class="blog-content border border-top-0 rounded-bottom p-4">
-                                <p class="mb-3">Posted By: Royal Hamblin </p>
+                                <p class="mb-3">Posted By: CALVO GENZ </p>
                                 <a href="#" class="h4">Adventures Trip</a>
                                 <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
                                 <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Read More</a>
@@ -1532,7 +1529,7 @@
                                 </div>
                             </div>
                             <div class="blog-content border border-top-0 rounded-bottom p-4">
-                                <p class="mb-3">Posted By: Royal Hamblin </p>
+                                <p class="mb-3">Posted By: RAMA </p>
                                 <a href="#" class="h4">Adventures Trip</a>
                                 <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
                                 <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Read More</a>
@@ -1555,7 +1552,7 @@
                                 </div>
                             </div>
                             <div class="blog-content border border-top-0 rounded-bottom p-4">
-                                <p class="mb-3">Posted By: Royal Hamblin </p>
+                                <p class="mb-3">Posted By: TEBESIGWA </p>
                                 <a href="#" class="h4">Adventures Trip</a>
                                 <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
                                 <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Read More</a>
@@ -1684,10 +1681,10 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Get In Touch</h4>
-                            <a href=""><i class="fas fa-home me-2"></i> 123 Street, New York, USA</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> +012 345 67890</a>
-                            <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a>
+                            <a href=""><i class="fas fa-home me-2"></i> Uganda, kamapala, Ent</a>
+                            <a href=""><i class="fas fa-envelope me-2"></i> genz@gmail.com</a>
+                            <a href=""><i class="fas fa-phone me-2"></i> 077451530</a>
+                            <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +256 200927477</a>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-share fa-2x text-white me-2"></i>
                                 <a class="btn-square btn btn-primary rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -1742,7 +1739,7 @@
                                                 <option value="1">USD</option>
                                                 <option value="2">EUR</option>
                                                 <option value="3">INR</option>
-                                                <option value="3">GBP</option>
+                                                <option value="3">SHS</option>
                                             </select>
                                             <label for="select1">$</label>
                                         </div>
@@ -1776,7 +1773,7 @@
                         <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                         <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                         <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="text-white" href="https://htmlcodex.com">HTML Codex</a> Distributed By <a href="https://themewagon.com">ThemeWagon</a>
+                        Designed By <a class="text-white" href="https://htmlcodex.com">CALVO Codex</a> Distributed By <a href="https://themewagon.com">ThemeWagon</a>
                     </div>
                     </div>
                 </div>
@@ -1800,5 +1797,6 @@
         <!-- Template Javascript -->
         <script src="js/main.js"></script>
     </body>
+
 
 </html>
